<resources>
    <string name="app_name">GitEmUp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    //errors
    <string name="network_error">Network error</string>
    <string name="server_error">Server Error</string>
    <string name="unauthorized_error">Unauthorized</string>
    <string name="bad_request_error">Bad Request</string>
    <string name="not_found_error">Not found</string>
    <string name="not_allowed_error">Not allowed</string>
    <string name="timeout_error">Timeout</string>
    <string name="unknown_error">Unknown error</string>
    <string name="rate_limit_exceeded_error">Rate limit exceeded</string>


    <string name="insert_query">Insert query</string>
    <string name="search">Search</string>
    <string name="search_repositories">Search repositories</string>
    <string name="stars">Stars</string>
    <string name="forks">Forks</string>
    <string name="watchers">Watchers</string>
    <string name="issues">Issues</string>
    <string name="please_enter_valid_query">Please, enter valid query!</string>
    <string name="author">Author:</string>
    <string name="updated">Updated:</string>
    <string name="created">Created:</string>
    <string name="language">Language:</string>
    <string name="last_push">Last push:</string>
    <string name="visit_author_page">Visit author page</string>
    <string-array name="sort">
        <item>By stars</item>
        <item>By forks</item>
        <item>By updated</item>
    </string-array>

    <string name="this_is_free_version">This is free version and you can not see details</string>

</resources>